--- a/templates/home.html
+++ b/templates/home.html
@@ -3,12 +3,15 @@
 <div class="container-fluid">
      <!-- Dropdown menu -->
     <div class="dropdown">
-        <label for="serverSelect">Choose a server:</label>
-        <select id="serverSelect" name="server">
-            {% for server in servers %}
-            <option value="{{ server }}">{{ server }}</option>
-            {% endfor %}
-        </select>
+        <form method="GET" action="{{ url_for('index') }}">
+            <label for="serverSelect">Choose a server:</label>
+            <select id="serverSelect" name="server" onchange="this.form.submit()">
+                {% for server in servers %}
+                <option value="{{ server }}" {% if server == selected_server %}selected{% endif %}>{{ server }}</option>
+                {% endfor %}
+            </select>
+</form>
+
     </div>
      <!-- Table -->
     <table class="table table-dark table-success table-striped">
