--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
         <tbody>
             {% for item in data %}
             <tr>
-                <td>{{ item[0] }}</td>
+                 <td><input type="checkbox" name="selected_rows" value="{{ item[0] }}"></td>
                 <td>{{ item[1] }}</td>
                 <td>{{ item[2] }}</td>
                 <td>{{ item[3] }}</td>
@@ -57,7 +57,8 @@
             {% endfor %}
         </tbody>
     </table>
-
+    <button type="submit" class="btn btn-danger mb-2">Выгрузка доступов</button>
+    </form>
     <!-- Pagination -->
     <nav>
         <ul class="pagination">
