--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,7 @@
             {% for item in data %}
             <tr>
                  <td><input type="checkbox" name="selected_rows" value="{{ item[0] }}"></td>
+                <td>{{ item[0] }}</td>
                 <td>{{ item[1] }}</td>
                 <td>{{ item[2] }}</td>
                 <td>{{ item[3] }}</td>
